--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div>
-        <p>XD 링크 공유는 아트 보드 단위로 가능한데, 전체를 한 번에 보여드리기 위해 XD로 디자인한 화면을 웹으로 보여드립니다.</p>
+        <p>XD 링크 공유는 아트 보드 단위로 가능하여 전체를 한 번에 보여드리기 위해 XD로 디자인한 화면을 웹으로 보여드립니다.</p>
         <section>
             <h2>StyleGuide</h2>
             <div>
